# SCRAPY

./: README-TESTING.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/download/: route.ts
app/api/download-videos/: route.ts
app/api/download/images/: route.ts
app/api/scrape/: route.ts
backend/: README.md  cli.py  pyproject.toml  requirements.txt
backend/config/: loader.py
backend/scraper_api/: __init__.py  main.py
backend/scraper_core/: __init__.py  changes.py  compliance.py  deduplicator.py  extractor.py  fetcher.py  logger.py  normalizer.py  output.py  rate_limiter.py  schemas.py  validator.py
components/: AuthPanel.tsx  DataPreviewPanel.tsx  FilterBuilder.tsx  FilterPanel.tsx  HistoryPanel.tsx  ImageCard.tsx  ImageGrid.tsx  ImageModal.tsx  ModuleSelector.tsx  ProductFilterPanel.tsx  ProductPreviewTable.tsx  ResultsSection.tsx  SchedulerPanel.tsx  ScrapeWizard.tsx  SelectorBuilder.tsx  SelectorTester.tsx  TemplateSelector.tsx  ValidationPanel.tsx
lib/: exportCsv.ts  exportJson.ts  history.ts  preview.ts  reliability.ts  scheduler.ts  scraper.ts  selectors.ts  site-adapters.ts  sitemap.ts  templates.ts  utils.ts  validation.ts
lib/modules/: assets.ts  contacts.ts  crawl.ts  images.ts  products.ts  screenshot.ts  text.ts  videos.ts
scraper_jobs/real_estate/: config.yaml
scraper_jobs/restaurant_menu/: config.yaml
scraper_jobs/shopify_product/: config.yaml
scripts/: debug-hm.mjs  test-scrape.mjs  test-scrape.py
types/: index.ts
(+1 files in other folders)
